<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/textColorBlack"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
                app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/lorem" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewDimention"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:contentPadding="16dp"
                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
                app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescription">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewHeightLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/height"
                        android:textColor="@color/textColorBlack"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toStartOf="@+id/textViewWeightLabel"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewWeightLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/weight"
                        android:textColor="@color/textColorBlack"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/textViewHeightLabel"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewHeightValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textViewHeightLabel"
                        app:layout_constraintTop_toBottomOf="@+id/textViewHeightLabel" />

                    <TextView
                        android:id="@+id/textViewWeightValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textViewWeightLabel"
                        app:layout_constraintTop_toBottomOf="@+id/textViewWeightLabel" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textViewBreeding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/breeding"
                android:textColor="@color/background_black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/cardViewDimention" />

            <TextView
                android:id="@+id/textViewGenderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/gender"
                android:textColor="@color/background_silver"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/textViewBreeding" />

            <TextView
                android:id="@+id/textViewGenderFeMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewGenderLabel"
                app:layout_constraintStart_toEndOf="@+id/guidelineValue"
                app:layout_constraintTop_toTopOf="@+id/textViewGenderLabel"
                tools:text="@string/gender" />

            <TextView
                android:id="@+id/textViewGenderMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                tools:text="@string/gender"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewGenderFeMale"
                app:layout_constraintStart_toEndOf="@+id/textViewGenderFeMale"
                app:layout_constraintTop_toTopOf="@+id/textViewGenderFeMale" />

            <TextView
                android:id="@+id/textViewEggGroupLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/egg_group"
                android:textColor="@color/background_silver"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/textViewGenderLabel" />

            <TextView
                android:id="@+id/textViewEggGroupValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewEggGroupLabel"
                app:layout_constraintStart_toEndOf="@+id/guidelineValue"
                app:layout_constraintTop_toTopOf="@+id/textViewEggGroupLabel"
                tools:text="@string/egg_group" />

            <TextView
                android:id="@+id/textViewEggCycleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/egg_cycle"
                android:textColor="@color/background_silver"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/textViewEggGroupLabel" />

            <TextView
                android:id="@+id/textViewEggCycleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewEggCycleLabel"
                app:layout_constraintStart_toEndOf="@+id/guidelineValue"
                app:layout_constraintTop_toTopOf="@+id/textViewEggCycleLabel"
                tools:text="@string/egg_group" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="130dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
